--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Un Juego de Naves Más</title>
 </head>
+
 <body>
-    <canvas id='game' width="710" height="400"></canvas>  
+
+    <!-- <div id="div1"> -->
+        <canvas id='game' width="710" height="400"></canvas>
+        
+    <!-- </div> -->
+
+
+
     <button>Full screen</button>
+    <button id="reset">Reset Score </button>
+
     <script src="./js/preload.js"></script>
 
     <script src="./main.js"></script>
-   
+
+    
+
 </body>
+
 </html>
